--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 html,
 body {
-  background: linear-gradient(#badbe4, #aaf7e1);
+  /* background: linear-gradient(#badbe4, #aaf7e1); */
 }
 
 #world {
