--- a/styles/lobby.style.css
+++ b/styles/lobby.style.css
@@ -151,7 +151,7 @@ body {
 .card {
   /* background: rgba(255, 255, 255, 0.95); */
   /* border-radius: 30px; */
-  /* padding: 20px; */
+  padding-top: 15rem;
   /* box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3); */
   margin-bottom: 30px;
 }
