--- a/styles/sound_toggle.css
+++ b/styles/sound_toggle.css
@@ -1,7 +1,7 @@
 /* Sound Toggle Button */
 .sound-toggle {
   position: absolute;
-  top: 20px;
+  top: 1rem;
   right: 20px;
   width: 50px;
   height: 50px;
