--- a/styles/stat_panel.css
+++ b/styles/stat_panel.css
@@ -1,7 +1,7 @@
 /* Stats Panel - Left Side */
 .stats-panel {
   position: absolute;
-  top: 5rem;
+  top: 1rem;
   left: 20px;
   /* background: rgba(0, 0, 0, 0.75); */
   /* backdrop-filter: blur(100px); */
@@ -125,8 +125,8 @@
 /* Score Display */
 .score-display {
   position: absolute;
-  top: 20px;
-  left: 20px;
+  top: 80px;
+  right: 20px;
   /* background: rgba(0, 0, 0, 0.8); */
   /* backdrop-filter: blur(10px); */
   border-radius: 15px;
