--- a/styles/stat_panel.css
+++ b/styles/stat_panel.css
@@ -231,6 +231,13 @@
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
 
+.player-score-empty {
+  color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  font-size: 0.85em;
+  padding: 0.5em 0;
+}
+
 /* Game Title Panel */
 .panel {
   position: absolute;
